# bootcamp_python

./: .gitignore  README.md  pyproject.toml
src/: create_measurements_parquet.py  using_duckdb_parquet.py  using_polars.py
