[project]
name = "bootcamp-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonas Barletta",email = "jonasbarletta@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "polars (>=1.29.0,<2.0.0)",
    "duckdb (>=1.2.2,<2.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
